@@ -282,6 +282,14 @@ val equal: t -> t -> bool
 (** The equal function for strings.
     @since 4.05.0 *)
 
+val starts_with : prefix:t -> t -> bool
+(** [String.starts_with prefix s] tests if [s] starts with [prefix]
+    @since 4.12.0 *)
+
+val ends_with : suffix:t -> t -> bool
+(** [String.ends_with suffix s] tests if [s] ends with [suffix]
+    @since 4.12.0 *)
+
 val split_on_char: sep:char -> string -> string list
 (** [String.split_on_char sep s] returns the list of all (possibly empty)
     substrings of [s] that are delimited by the [sep] character.
